--- a/main.html
+++ b/main.html
@@ -10,12 +10,12 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<ol>
+	<ol data-ns-test="shppingList">
 		<li data-ns-test="shoppingList">Shoe</li>
 		<li data-ns-test="shoppingList">Boxing gloves</li>
 		<li data-ns-test="shoppingList">Bean bag</li>
 	</ol>
-	<ul>
+	<ul data-ns-test="holidayList">
 		<li data-ns-test="holidayList">Manali</li>
 		<li data-ns-test="holidayList">Goa</li>
 		<li data-ns-test="holidayList">Kedarnath</li>
